bbh, boo laugh on fall impl

--- a/QuestPackages/m64/bbh/level/falltp/falltp.yml
+++ b/QuestPackages/m64/bbh/level/falltp/falltp.yml
@@ -17,7 +17,7 @@ events:
 
 
   # On fall
-  on_falltp:            "folder e_tp_fall_water"
+  on_falltp:            "folder e_tp_fall_water,core-sfx.e_boo_laugh"
   e_tp_fall_water:      "teleport $fall_warp$"
 
 
