--- a/QuestPackages/m64/bob/package.yml
+++ b/QuestPackages/m64/bob/package.yml
@@ -15,7 +15,7 @@ variables:
 events:
   init_level:         "folder init_spawns,init_warps,init_cannons,init_stars,e_play_music,init_fakes"
   deit_level:         "folder deit_spawns,deit_warps,deit_cannons,deit_stars,e_stop_music"
-  unlo_level:         "folder deit_fakes,exit_level period:20 ticks"
+  unlo_level:         "folder deit_fakes,exit_level" #  period:20 ticks
   exit_level:         "folder deit_level,e_tp_respawn,core-main.init_castle"
 
   on_death:           "folder e_notify_death,unlo_level,e_point_add_death,e_gpoint_add_death"
