bob, koopa race time-left progress bar

--- a/QuestPackages/m64/bob/package.yml
+++ b/QuestPackages/m64/bob/package.yml
@@ -26,6 +26,7 @@ events:
 
   # Play music
   e_play_music:       "folder core-music.e_play_bob"
+  e_play_speedrun:    "folder core-music.e_play_secret_slide"
   e_stop_music:       "folder core-music.e_stop_music"
 
   ### --- Spawn / Respawn ---------------------------------------
