--- a/QuestPackages/m64/lll/npcs/npc_cpt_toad.yml
+++ b/QuestPackages/m64/lll/npcs/npc_cpt_toad.yml
@@ -1,16 +1,14 @@
 variables:
-  s9:
-    door_loc:             -344;74;-129;marocraft
   s10:
-    door_loc:             -395;97;-96;marocraft
+    door_loc:             -809;34;-536;marocraft
   s11:
-    door_loc:             -451;79;-58;marocraft
+    door_loc:             -900;47;-613;marocraft
 
 
 npcs:
-  '1': "cpttoad_1"
-  '2': "cpttoad_2"
-  '3': "cpttoad_3"
+  '11': "cpttoad_1"
+  '12': "cpttoad_2"
+  '13': "cpttoad_3"
 
 conversations:
   cpttoad_1:
@@ -59,18 +57,17 @@ conversations:
 events:
   ### STAR 9 - CAPTAIN TOAD 1
   # Win
-  win_s9:                 "folder e_notif_s9_win,core-sfx.e_toad_yahoo,core-sfx.e_got_star,e_broad_s9_first,tag_add_s9_win,e_door_close_s9,e_stop_music,exit_star"
+  win_s9:                 "folder e_notif_s9_win,core-sfx.e_toad_yahoo,core-sfx.e_got_star,e_broad_s9_first,tag_add_s9_win,e_stop_music,exit_star"
   e_notif_s9_win:         "notify &3Lost Toad #1\n&2Cleared! io:title"
-  e_broad_s9_first:       "command broadcast &6%player% &2got a star: [BOB] Lost Toad #1"
+  e_broad_s9_first:       "command broadcast &6%player% &2got a star: [LLL] Lwwost Toad #1"
   tag_add_s9_win:         "tag add s9"
-  e_door_close_s9:        "door $s9.door_loc$ off"
 
 
   ### STAR 10 - CAPTAIN TOAD 2
   # Win
   win_s10:                "folder e_notif_s10_win,core-sfx.e_toad_yahoo,core-sfx.e_got_star,e_broad_s10_first,tag_add_s10_win,e_door_close_s10,e_stop_music,exit_star"
   e_notif_s10_win:        "notify &3Lost Toad #2\n&2Cleared! io:title"
-  e_broad_s10_first:      "command broadcast &6%player% &2got a star: [BOB] Lost Toad #2"
+  e_broad_s10_first:      "command broadcast &6%player% &2got a star: [LLL] Lost Toad #2"
   tag_add_s10_win:        "tag add s10"
   e_door_close_s10:       "door $s10.door_loc$ off"
 
@@ -79,7 +76,7 @@ events:
   # Win
   win_s11:                "folder e_notif_s11_win,core-sfx.e_toad_yahoo,core-sfx.e_got_star,e_broad_s11_first,tag_add_s11_win,e_door_close_s11,e_stop_music,exit_star"
   e_notif_s11_win:        "notify &3Lost Toad #3\n&2Cleared! io:title"
-  e_broad_s11_first:      "command broadcast &6%player% &2got a star: [BOB] Lost Toad #3"
+  e_broad_s11_first:      "command broadcast &6%player% &2got a star: [LLL] Lost Toad #3"
   tag_add_s11_win:        "tag add s11"
   e_door_close_s11:       "door $s11.door_loc$ off"
 
