--- a/QuestPackages/m64/lll/stars/star_1.yml
+++ b/QuestPackages/m64/lll/stars/star_1.yml
@@ -4,8 +4,8 @@ variables:
     npc_bb:               7
 
 
+### STAR 1 - BOIL THE BIG BULLY
 events:
-  ### STAR 1 - BOIL THE BIG BULLY
   # Init
   init_s1:                "folder e_obj_add_s1_kbb"
   e_obj_add_s1_kbb:       "objective add o_s1_kill_bb"
@@ -20,7 +20,7 @@ events:
   e_s1_pardon_player:     "command lp user %player% parent add bb_whitelist"
 
   # Win
-  win_s1:                 "folder e_notif_s1_win,core-sfx.e_got_star,if_firstwin_s1,cleanup_s1"
+  win_s1:                 "folder e_notif_s1_win,core-sfx.e_got_star,if_firstwin_s1,deit_s1"
   e_notif_s1_win:         "notify &3Bully the big bully\n&2Cleared! io:title"
 
   # First win
@@ -30,7 +30,7 @@ events:
   tag_add_s1_win:         "tag add s1"
 
   # Cleanup
-  cleanup_s1:             "folder e_obj_del_s1_star,e_obj_del_s1_kbb,if_s1_gotten,if_s1_spawned,e_s1_tag_del_spawned"
+  deit_s1:                "folder e_obj_del_s1_star,e_obj_del_s1_kbb,if_s1_gotten,if_s1_spawned,e_s1_tag_del_spawned"
   e_obj_del_s1_star:      "objective remove o_s1_star"
   e_obj_del_s1_kbb:       "objective remove o_s1_kill_bb"
 
