--- a/QuestPackages/m64/lll/stars/star_8.yml
+++ b/QuestPackages/m64/lll/stars/star_8.yml
@@ -6,8 +6,8 @@ variables:
     start_loc:            -914;36;-406;marocraft
 
 
+### STAR 8 - KOOPA THE QUICK
 events:
-  ### STAR 8 - KOOPA THE QUICK
   # Init
   init_s8:                "folder e_obj_add_s8_start"
   e_obj_add_s8_start:     "objective add o_s8_start"
@@ -24,7 +24,7 @@ events:
   e_s8_10_sec_left:       "folder core-sfx.e_time_almost_up,e_s8_notify_10sec"
   e_s8_notify_10sec:      "notify &c10 seconds left!"
   # Win
-  win_s8:                 "folder e_notif_s8_win,core-sfx.e_got_star,e_broad_s8_win,cleanup_s8,if_firstwin_s8"
+  win_s8:                 "folder e_notif_s8_win,core-sfx.e_got_star,e_broad_s8_win,deit_s8,if_firstwin_s8"
   e_notif_s8_win:         "notify &3Koopa The Quick\n&2Cleared! io:title"
   e_broad_s8_win:         "command broadcast [&6%player%&r]: LLL Speedrun: %math.calc:($s8.total_time$-objective.o_s8_speedrun.rawSeconds)~3% sec"
 
@@ -35,13 +35,13 @@ events:
   tag_add_s8_win:         "tag add s8"
 
   # Cleanup
-  cleanup_s8:             "folder e_obj_del_s8_start,e_obj_del_s8_speedrun,e_obj_del_s8_goal,e_obj_del_s8_10sec"
+  deit_s8:                "folder e_obj_del_s8_start,e_obj_del_s8_speedrun,e_obj_del_s8_goal,e_obj_del_s8_10sec"
   e_obj_del_s8_start:     "objective remove o_s8_start"
   e_obj_del_s8_speedrun:  "objective remove o_s8_speedrun"
   e_obj_del_s8_goal:      "objective remove o_s8_goal"
   e_obj_del_s8_10sec:     "objective remove o_s8_speedrun_10sec"
   # Reload
-  reload_s8:              "folder cleanup_s8,init_s8"
+  reload_s8:              "folder deit_s8,init_s8"
 
 
 conditions:
